<resources>
    <string name="app_name">Hoduj jajko</string>
    <string name="enter_timer_string">np. 25+5+25+5</string>
    <string name="set_timer_string">Ustaw czasomierz</string>
    <string name="timer1_string">25+5</string>
    <string name="timer2_string">20+2</string>
    <string name="timer3_string">15+2</string>
    <string name="timer4_string">10+1</string>
    <string name="timer5_string">45+5</string>
    <string name="timer6_string">35+5</string>
    <string name="timer7_string">0.75+0.25</string>
    <string name="timer8_string">1+0.25</string>
    <string name="start_timer_string">START</string>
    <string name="work_string">Praca/Trening</string>
    <string name="running_string">Bieganie</string>
    <string name="training_string">Trening</string>
    <string name="schedule_string">Twój grafik</string>
    <string name="pedometr_string">Krokomierz</string>
    <string name="reset_string">Resetuj</string>
    <string name="empty_timer_string">Pusty string</string>
    <string name="see_schedule_string">Zobacz grafik</string>
    <string name="create_schedule_string">Dodaj do grafiku</string>
    <string name="schedule_name_string">Nazwa</string>
    <string name="per_week_string">Co tydzień</string>
    <string name="once_string">Jednorazowo</string>
    <string name="start_time_string">Czas rozpoczęcia</string>
    <string name="end_time_string">Czas zakończenia</string>
    <string name="choose_day_string">Wybierz dzień</string>
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="save_string">Zapisz</string>
    <string name="start_string">Start</string>
    <string name="stop_string">Stop</string>
    <string name="blank_string">Wszystkie pola muszą być wypełnione</string>
    <string name="no_events_string">Brak wydarzeń</string>
    <string name="ok_string">OK</string>
    <string name="add_alert_string">Dodaj powiadomienie</string>
    <string name="alert_added_string">Powiadomienie dodane</string>
    <string name="activity_added_string">Aktywność została dodana</string>
    <string name="alert_message_string">Za 5 min zaczynasz wydarzenie: </string>
    <string name="weather_message_string">Temperatura na zewnątrz: </string>
    <string name="degrees_string">ºC</string>
    <string name="counter">Ilość kroków</string>
    <string name="delete">Usuń</string>
    <string name="your_activities">Twoje aktywności</string>
    <string name="message_timer">Masz włączony timer</string>
    <string name="message_end_timer">Koniec czasu</string>
    <string name="notification_string">Powiadomienie</string>
    <string name="no_activities_string">Brak aktywności</string>
    <string name="result_string"> wynik: </string>
    <string name="points_string"> punkty: </string>
    <string name="training_type_string">typ treningu: </string>
    <string name="start_of_training_string"> start: </string>
    <string name="location_string">Twoja lokalizacja to</string>
    <string name="settings_string">Ustawienia</string>
    <string name="alert_settings_string">GPS nie jest włączony. Czy chcesz iść do ustawień?</string>
    <string name="sensor_unavailable_string">Sensor niedostępny</string>
    <string name="score_string">Zdobyto </string>
    <string name="score_points_string"> punktów</string>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>
</resources>
