<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <TextView
        android:id="@+id/setTimerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_timer_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_timer_string"
        android:inputType="numberSigned" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/timer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer1_string" />

            <Button
                android:id="@+id/timer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer2_string" />

            <Button
                android:id="@+id/timer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer3_string" />

            <Button
                android:id="@+id/timer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer4_string" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/timer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer5_string" />

            <Button
                android:id="@+id/timer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer6_string" />

            <Button
                android:id="@+id/timer7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer7_string" />

            <Button
                android:id="@+id/timer8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer8_string" />
        </TableRow>

    </TableLayout>

</LinearLayout>

    <Button
        android:id="@+id/start_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_timer_string" />
</RelativeLayout>