<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/study"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_string" />

    <Button
        android:id="@+id/training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_string" />

    <Button
        android:id="@+id/running"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/running_string" />

    <Button
        android:id="@+id/pedometr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedometr_string" />
</LinearLayout>