<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/schedule_name_string"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <EditText
                android:id="@+id/scheduleName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="67dp" >

            <RadioButton
                android:id="@+id/perWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/per_week_string" />

            <RadioButton
                android:id="@+id/once"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/once_string" />

        </RadioGroup>

        <Button
            android:id="@+id/startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time_string" />

        <Button
            android:id="@+id/endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time_string" />


    </LinearLayout>

</RelativeLayout>